# econokey-backend

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
app/: __init__.py  __main__.py  app.py  config.py
app/endpoints/auth/: views.py
app/endpoints/generation/: __init__.py  views.py
app/endpoints/generators/: __init__.py  views.py
app/endpoints/vault/: __init__.py  views.py
app/endpoints/vault/note/: __init__.py  views.py
app/endpoints/vault/password/: __init__.py  views.py
app/endpoints/vault/wallet/: __init__.py  views.py
app/models/: note.py  password.py  vault.py  wallet.py
app/modules/: __init__.py
app/services/generators/: factory.py  generator_service.py  loader.py
app/services/generators/strategies/: base.py  passphrase.py  password.py  wallet.py  wallet_btc.py
app/services/vault/vault_controller/: __init__.py  base_vault.py  security.py  vault_controller.py
app/services/vault/vault_controller/vaults/: Hola.vault  vault.json
app/utils/: wordlist.py
